--- a/generic_tableview/src/main/res/layout/custom_checkbox_no_text.xml
+++ b/generic_tableview/src/main/res/layout/custom_checkbox_no_text.xml
@@ -5,7 +5,7 @@
     android:gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <CheckBox android:id="@+id/bus_route_list_item_reminder"
+    <CheckBox android:id="@+id/checkBox"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         />
