--- a/generic_tableview/src/main/res/layout/custom_switch_no_text.xml
+++ b/generic_tableview/src/main/res/layout/custom_switch_no_text.xml
@@ -9,6 +9,7 @@
         android:text=""
         android:textOn=""
         android:textOff=""
+        android:id="@+id/switchView"
         android:layout_gravity="center_horizontal"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         app:showText="false"
